argocd/smart-home/esphome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esphome
  namespace: homeassistant
  labels:
    app: esphome
spec:
  selector:
    matchLabels:
      app: esphome
  replicas: 1
  template:
    metadata:
      labels:
        app: esphome
    spec:
      containers:
      - name: esphome
        image: esphome/esphome:2025.6.3
        volumeMounts:
        - mountPath: /config
          name: config
        resources:  {}
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: esphome-config
