argocd/smart-home/esphome/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esphome
  namespace: homeassistant
spec:
  ingressClassName: nginx
  rules:
  - host: esphome.legion.lan
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: esphome
            port:
              number: 6052
